Fix accidental copy paste typo